--- a/excel-task.ipynb
+++ b/excel-task.ipynb
@@ -11,6 +11,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c584af75-1d83-45ee-bde9-970ce6a732c0",
+   "metadata": {
+    "scrolled": true
+   },
+   "source": [
+    "Типизирую ИНН как строку, чтобы не съедались нули в первой позиции\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "id": "39524b1f",
@@ -853,6 +863,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c74c1bd8-94a7-4619-ab3b-c14bfbe980b7",
+   "metadata": {},
+   "source": [
+    "По первому вхождению даты сертификата"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 38,
    "id": "3ddf0f65",
@@ -885,6 +903,14 @@
    "outputs": [],
    "source": [
     "df_grouped.to_excel('gub_filtered_grouped_by_all_first_date.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c4aeb2b-f3ae-43fd-908a-e1a8ad4e65dc",
+   "metadata": {},
+   "source": [
+    "По последнему вхождению даты сертификата"
    ]
   },
   {
