--- a/excel-task.ipynb
+++ b/excel-task.ipynb
@@ -1282,6 +1282,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "5bb660f8-ba2f-4588-8c7e-e69aa8ef591f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interpretation = \"\"\"\n",
+    "\n",
+    "      Q1-1.5IQR   Q1   median  Q3   Q3+1.5IQR\n",
+    "                  |-----:-----|\n",
+    "  o      |--------|     :     |--------|    o  o\n",
+    "                  |-----:-----|\n",
+    "flier             <----------->            fliers\n",
+    "                       IQR \n",
+    "                       \n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 32,
    "id": "e0a4ee15-7b5c-4df4-934a-34e61ca3a98c",
    "metadata": {},
