--- a/excel-task.ipynb
+++ b/excel-task.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "338e67e9",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "39524b1f",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "53834101",
    "metadata": {},
    "outputs": [
@@ -486,7 +486,7 @@
        "[283532 rows x 16 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "a6a7c327",
    "metadata": {},
    "outputs": [
@@ -507,7 +507,7 @@
        "283532"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "7e8ecf9f",
    "metadata": {},
    "outputs": [],
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "343ab2b1",
    "metadata": {},
    "outputs": [
@@ -907,7 +907,7 @@
        "[283249 rows x 16 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "7f9df7d9",
    "metadata": {},
    "outputs": [
@@ -928,7 +928,7 @@
        "283249"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -947,14 +947,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "0c74d033",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_grouped = gub_filtered.groupby('Наименование продукции').agg({\n",
     "    'Объем': 'sum',\n",
-    "    'Хозяйствующий субъект': 'first',\n",
+    "    'Площадка': 'first',\n",
     "    'ИНН ХС': 'first',\n",
     "    'Дата сертификата': 'first',\n",
     "}).reset_index()\n"
@@ -970,14 +970,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "87b07c14",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_grouped2 = gub_filtered.groupby('Наименование продукции').agg({\n",
     "    'Объем': 'sum',\n",
-    "    'Хозяйствующий субъект': 'first',\n",
+    "    'Площадка': 'first',\n",
     "    'ИНН ХС': 'first',\n",
     "    'Дата сертификата': 'last'\n",
     "}).reset_index()"
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "e15793f4",
    "metadata": {},
    "outputs": [],
@@ -995,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "07cc4855",
    "metadata": {},
    "outputs": [],
@@ -1005,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "ed43e927-78d7-48d4-be08-d3e0dd3e3ec0",
    "metadata": {},
    "outputs": [
@@ -1032,7 +1032,7 @@
        "      <th></th>\n",
        "      <th>Наименование продукции</th>\n",
        "      <th>Объем, кг</th>\n",
-       "      <th>Хозяйствующий субъект</th>\n",
+       "      <th>Площадка</th>\n",
        "      <th>ИНН ХС</th>\n",
        "      <th>Дата сертификата - первая</th>\n",
        "      <th>Дата сертификата - последняя</th>\n",
@@ -1043,7 +1043,7 @@
        "      <th>0</th>\n",
        "      <td>\"Грудинка \"Губернская\" к/в\"</td>\n",
        "      <td>1075.000</td>\n",
-       "      <td>ОБЩЕСТВО С ОГРАНИЧЕННОЙ ОТВЕТСТВЕННОСТЬЮ СЕЛЬС...</td>\n",
+       "      <td>Общество с ограниченной ответственностью сельс...</td>\n",
        "      <td>2634036716</td>\n",
        "      <td>2018-12-03 16:24:34</td>\n",
        "      <td>2019-01-31 13:26:57</td>\n",
@@ -1052,7 +1052,7 @@
        "      <th>1</th>\n",
        "      <td>\"Сервелат Губернский \"колбаса,в/у(0,8кг)шт ст/...</td>\n",
        "      <td>38475.200</td>\n",
-       "      <td>ОБЩЕСТВО С ОГРАНИЧЕННОЙ ОТВЕТСТВЕННОСТЬЮ \"СИБИ...</td>\n",
+       "      <td>ООО \"Сибирские Мясные Продукты\"</td>\n",
        "      <td>5405305000</td>\n",
        "      <td>2022-03-31 06:40:36</td>\n",
        "      <td>2024-03-17 06:11:51</td>\n",
@@ -1061,7 +1061,7 @@
        "      <th>2</th>\n",
        "      <td>021 Сыр полутвердый \"Губернский\" козий</td>\n",
        "      <td>2.000</td>\n",
-       "      <td>ГАЛАНОВА ЛЮДМИЛА ЛЕОНАРДОВНА</td>\n",
+       "      <td>Семейная сыроварня Галановъ и Ко</td>\n",
        "      <td>782065556150</td>\n",
        "      <td>2021-06-08 21:04:44</td>\n",
        "      <td>2021-06-08 21:04:44</td>\n",
@@ -1070,7 +1070,7 @@
        "      <th>3</th>\n",
        "      <td>041 Сыр полутвердый \"Губернский\" с пажитником</td>\n",
        "      <td>1020.064</td>\n",
-       "      <td>ГАЛАНОВ КОНСТАНТИН ВАДИМОВИЧ</td>\n",
+       "      <td>Семейная сыроварня Галановъ и Ко</td>\n",
        "      <td>782095122181</td>\n",
        "      <td>2019-08-04 20:26:46</td>\n",
        "      <td>2024-03-28 15:32:55</td>\n",
@@ -1079,7 +1079,7 @@
        "      <th>4</th>\n",
        "      <td>041 Сыр полутвердый Изварский \"Губернский\" с п...</td>\n",
        "      <td>75.000</td>\n",
-       "      <td>ГАЛАНОВА ЛЮДМИЛА ЛЕОНАРДОВНА</td>\n",
+       "      <td>Семейная сыроварня Галановъ и Ко</td>\n",
        "      <td>782065556150</td>\n",
        "      <td>2024-05-29 15:56:36</td>\n",
        "      <td>2024-07-03 11:35:57</td>\n",
@@ -1097,7 +1097,7 @@
        "      <th>608</th>\n",
        "      <td>сыр Губернский</td>\n",
        "      <td>776.000</td>\n",
-       "      <td>КОНГУР ЕЛЕНА НИКОЛАЕВНА</td>\n",
+       "      <td>ИП ГКФХ Конгур Елена Николаевна</td>\n",
        "      <td>352801900600</td>\n",
        "      <td>2021-03-10 12:08:46</td>\n",
        "      <td>2024-08-20 17:54:26</td>\n",
@@ -1115,7 +1115,7 @@
        "      <th>610</th>\n",
        "      <td>творог ТМ \"Губернские традиции\" с м.д.ж. 5%, п...</td>\n",
        "      <td>8342.800</td>\n",
-       "      <td>АКЦИОНЕРНОЕ ОБЩЕСТВО \"ЛАКТИС\"</td>\n",
+       "      <td>АО \"Лактис\", молокоперерабатывающее предприятие</td>\n",
        "      <td>4325000106</td>\n",
        "      <td>2021-06-30 00:10:11</td>\n",
        "      <td>2022-07-13 00:19:16</td>\n",
@@ -1124,7 +1124,7 @@
        "      <th>611</th>\n",
        "      <td>шницель \" Губернский\" весовой</td>\n",
        "      <td>90.000</td>\n",
-       "      <td>ЧУДИНОВ ИРИК МИХАЙЛОВИЧ</td>\n",
+       "      <td>ИП Чудинов Игорь Михайлович</td>\n",
        "      <td>025702278256</td>\n",
        "      <td>2019-06-21 17:33:47</td>\n",
        "      <td>2019-08-09 20:26:05</td>\n",
@@ -1133,7 +1133,7 @@
        "      <th>612</th>\n",
        "      <td>шницель Губернский</td>\n",
        "      <td>5.680</td>\n",
-       "      <td>КУЗНЕЦОВА АЛЬБИНА ДАМИРОВНА</td>\n",
+       "      <td>ИП Кузнецова Альбина Дамировна</td>\n",
        "      <td>183308497634</td>\n",
        "      <td>2019-02-13 13:09:21</td>\n",
        "      <td>2019-02-13 13:09:21</td>\n",
@@ -1157,18 +1157,18 @@
        "611                      шницель \" Губернский\" весовой     90.000   \n",
        "612                                 шницель Губернский      5.680   \n",
        "\n",
-       "                                 Хозяйствующий субъект        ИНН ХС  \\\n",
-       "0    ОБЩЕСТВО С ОГРАНИЧЕННОЙ ОТВЕТСТВЕННОСТЬЮ СЕЛЬС...    2634036716   \n",
-       "1    ОБЩЕСТВО С ОГРАНИЧЕННОЙ ОТВЕТСТВЕННОСТЬЮ \"СИБИ...    5405305000   \n",
-       "2                         ГАЛАНОВА ЛЮДМИЛА ЛЕОНАРДОВНА  782065556150   \n",
-       "3                         ГАЛАНОВ КОНСТАНТИН ВАДИМОВИЧ  782095122181   \n",
-       "4                         ГАЛАНОВА ЛЮДМИЛА ЛЕОНАРДОВНА  782065556150   \n",
+       "                                              Площадка        ИНН ХС  \\\n",
+       "0    Общество с ограниченной ответственностью сельс...    2634036716   \n",
+       "1                      ООО \"Сибирские Мясные Продукты\"    5405305000   \n",
+       "2                     Семейная сыроварня Галановъ и Ко  782065556150   \n",
+       "3                     Семейная сыроварня Галановъ и Ко  782095122181   \n",
+       "4                     Семейная сыроварня Галановъ и Ко  782065556150   \n",
        "..                                                 ...           ...   \n",
-       "608                            КОНГУР ЕЛЕНА НИКОЛАЕВНА  352801900600   \n",
+       "608                    ИП ГКФХ Конгур Елена Николаевна  352801900600   \n",
        "609  ОБЩЕСТВО С ОГРАНИЧЕННОЙ ОТВЕТСТВЕННОСТЬЮ \"ПРОГ...    9718132659   \n",
-       "610                      АКЦИОНЕРНОЕ ОБЩЕСТВО \"ЛАКТИС\"    4325000106   \n",
-       "611                            ЧУДИНОВ ИРИК МИХАЙЛОВИЧ  025702278256   \n",
-       "612                        КУЗНЕЦОВА АЛЬБИНА ДАМИРОВНА  183308497634   \n",
+       "610    АО \"Лактис\", молокоперерабатывающее предприятие    4325000106   \n",
+       "611                        ИП Чудинов Игорь Михайлович  025702278256   \n",
+       "612                     ИП Кузнецова Альбина Дамировна  183308497634   \n",
        "\n",
        "    Дата сертификата - первая Дата сертификата - последняя  \n",
        "0         2018-12-03 16:24:34          2019-01-31 13:26:57  \n",
@@ -1186,7 +1186,7 @@
        "[613 rows x 6 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1197,18 +1197,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "e129e277-a637-4b70-8da1-cd11d0b24a16",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_grouped = df_grouped[['Хозяйствующий субъект', 'ИНН ХС', 'Наименование продукции', 'Дата сертификата - первая', \n",
+    "df_grouped = df_grouped[['Площадка', 'ИНН ХС', 'Наименование продукции', 'Дата сертификата - первая', \n",
     "                        'Дата сертификата - последняя', 'Объем, кг']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "c6075c46-6ec8-49e1-b7a8-ce5743788420",
    "metadata": {},
    "outputs": [],
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "2bbffdf7-b48a-4cc5-afd6-42676c93a9f3",
    "metadata": {},
    "outputs": [],
@@ -1244,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "dcb343e9-2471-4913-95ef-d84ae17cb704",
    "metadata": {
     "scrolled": true
@@ -1282,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "5bb660f8-ba2f-4588-8c7e-e69aa8ef591f",
    "metadata": {},
    "outputs": [],
@@ -1301,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "id": "e0a4ee15-7b5c-4df4-934a-34e61ca3a98c",
    "metadata": {},
    "outputs": [
